fixed buttons and broken CSS that got deleted prolly in a merge

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,6 +124,10 @@ button:disabled {
   min-height: 50px;
 }
 
+.btn_small {
+  font-size: 14px;
+}
+
 h1{
   font-size: 28px;
 }
